tests customer seed rswag
