# app/controllers/application_controller.rb
@@ -1,12 +1,14 @@
 class ApplicationController < ActionController::API
 
   def pagination_meta(object)
+    class_name = object.class.to_s.underscore.split("/").first
     {
-        current_page: object.current_page,
-        next_page: object.next_page,
-        prev_page: object.prev_page,
-        total_pages: object.total_pages,
-        total_count: object.total_count
+        "#{class_name}": object, pages:{  current_page: object.current_page,
+                                          next_page: object.next_page,
+                                          prev_page: object.prev_page,
+                                          total_pages: object.total_pages,
+                                          total_count: object.total_count
+                                       }
     }
   end
 
