# swagger/v1/swagger.yaml
@@ -100,24 +100,40 @@ paths:
           schema:
             type: object
             properties:
-              type: array
-              items:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  name:
-                    type: string
-                  email:
-                    type: string
+              customer:
+                type: array
+                items:
                   type: object
-                  form:
+                  properties:
                     id:
                       type: integer
                     name:
                       type: string
-                  created_at:
-                    type: string
+                    email:
+                      type: string
+                    type: object
+                    form:
+                      id:
+                        type: integer
+                      name:
+                        type: string
+                    created_at:
+                      type: string
+              type: object
+              properties:
+                pages:
+                  current_page:
+                    type: integer
+                  next_page:
+                    type: integer
+                    x-nullable: true
+                  previous_page:
+                    type: integer
+                    x-nullable: true
+                  total_pages:
+                    type: integer
+                  total_count:
+                    type: integer
   "/api/forms/{id}":
     get:
       summary: Get Form
